# swobml-sync

./: .dockerignore  .editorconfig  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  notes.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-install.sh
.github/workflows/: black.yml  docker-publish.yml  python-ci.yml
.scratch/swobml-sync-build/: README.md
.scratch/swobml-sync-build/issues/: 01-scaffold-and-cli.md  02-walking-skeleton-one-day.md  03-rolling-window-and-date-semantics.md  04-retry-and-failure-exit-semantics.md  05-concurrency.md  06-persistent-file-logging.md  07-end-of-run-housekeeping.md  08-dockerfile.md  09-dual-registry-ci.md  10-as-of-anchor.md  11-availability-discovery-and-gating.md  12-request-stats-count-persist.md  13-dashboard-skeleton-and-data-model.md  14-partner-time-series-charts.md
docs/adr/: 0001-flat-json-sync-state-on-nfs.md  0002-change-detection-from-directory-listing.md  0003-allow-requests-and-lxml.md  0004-discover-availability-from-server.md  0005-persist-run-stats-for-a-separate-dashboard.md
docs/agents/: domain.md  triage-labels.md
src/swobml_sync/: __init__.py  atomicio.py  availability.py  cli.py  client.py  config.py  dashboard.py  delta.py  housekeeping.py  layout.py  listing.py  logsetup.py  manifest.py  state.py  sync.py
tests/: test_availability.py  test_cli.py  test_client.py  test_concurrency.py  test_config.py  test_dashboard.py  test_delta.py  test_housekeeping.py  test_layout.py  test_listing.py  test_manifest.py  test_state.py  test_sync.py  test_window.py
tests/fixtures/: day_index.html  station_kenn.html  sync_day.html  sync_eutk.html  sync_kenn.html
